syntax = "proto3";

package sail.worker;

message RunTaskRequest {
  uint64 task_id = 1;
  uint64 partition = 2;
  bytes plan = 3;
}

message RunTaskResponse {
}

message StopTaskRequest {
  uint64 task_id = 1;
  uint64 partition = 2;
}

message StopTaskResponse {
}

message StopWorkerRequest {
}

message StopWorkerResponse {
}

service WorkerService {
  rpc RunTask(RunTaskRequest) returns (RunTaskResponse) {}
  rpc StopTask(StopTaskRequest) returns (StopTaskResponse) {}
  rpc StopWorker(StopWorkerRequest) returns (StopWorkerResponse) {}
}
